# opencv_task2

./: README.md
opencv_project/: CMakeLists.txt  README.md
opencv_project/src/: main.cpp
